vlib/v/parser/tests/string_invalid_prefix_err.vv
fn main() {
    why := w'why'
    println(why)
}
